server less with dynamodb local

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "handler.js",
   "dependencies": {
+    "serverless-dynamodb-local": "^0.2.30",
     "serverless-offline": "^3.25.4"
   },
   "devDependencies": {},
