--- a/serverless.yml
+++ b/serverless.yml
@@ -24,6 +24,17 @@ provider:
 
 plugins:
   - serverless-offline
+  - serverless-dynamodb-local
+
+
+custom:
+  dynamodb:
+    start:
+      port: 8000
+      # inMemory: true
+      migrate: true
+      seed: true
+      # dbPath: /Users/malik/workspace/serverless/my-service/
 
 # you can overwrite defaults here
 #  stage: dev
@@ -59,12 +70,28 @@ plugins:
 #    - exclude-me-dir/**
 
 functions:
-  hello:  handler
+  hello:
     handler: handler.hello
     events:
      - http:
          path: users/create
          method: get
+
+resources:
+  Resources:
+    usersTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: usersTable
+        AttributeDefinitions:
+          - AttributeName: email
+            AttributeType: S
+        KeySchema:
+          - AttributeName: email
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
